Implementing fixes for strict Java8 compliance